--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,7 +36,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
-    # Applies to all files under models/example/
-    example:
-      +materialized: table
+  my_new_project:  # Replace with your actual project name
+    staging:
+      bigquery:
+        citibike-nyc:
+          +materialized: table  # or view
